[package]
name = "htmlq"
description = "Like jq, but for HTML."
homepage = "https://github.com/mgdm/htmlq"
repository = "https://github.com/mgdm/htmlq"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["Michael Maclean <michael@mgdm.net>"]
edition = "2018"

[dependencies]
kuchiki = "0.7.3"
html5ever = "0.23.0"
clap = "2.33.0"
