[package]
name = "htmlq"
description = "Like jq, but for HTML."
homepage = "https://github.com/mgdm/htmlq"
repository = "https://github.com/mgdm/htmlq"
readme = "README.md"
license = "MIT"
version = "0.3.0"
authors = ["Michael Maclean <michael@mgdm.net>"]
edition = "2018"

[dependencies]
kuchiki = "0.8.1"
html5ever = "0.25.1"
clap = "2.33.3"
lazy_static = "1.4.0"
url = "2.2.2"
